--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
 </head>
+
 <body>
-    map, filter & reduce 🙏 Namaste JavaScript Ep. 19 
-    <script>
-        const arr=[4,5,6,7];
-        
-        function double(x){
-            return x*2;
-        }
 
-        function triple(x){
-            return x*3;
-        }
+    <input type="text" onkeyup="betterFunction()">
 
-        function binary(x){
-            return x.toString(2);
-        }
-        const output=arr.map(binary);
-        console.log(output);
 
-    </script>
+    <script src="index.js"></script>
 </body>
+
 </html>
