Callback functions with Event Listener

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <input type="text" onkeyup="betterFunction()">
+    <button id="clickMe">Click Me</button>
 
 
     <script src="index.js"></script>
